# zedmirs

./: Cargo.toml  README.md
src/: config.rs  downloader.rs  ext_searcher.rs  index.rs  main.rs  mirror.rs  package_meta.rs  progress.rs  serve.rs
src/serve/: extensions.rs
