[package]
name = "zedmirs"
description = "A simple service for mirroring zed extensions and hosting them"
authors = ["cyr"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cyr/zedmirs"
keywords = ["zed", "extensions", "mirror"]

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
async-channel = "2.5.0"
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive", "cargo"] }
compact_str = "0.9.0"
console = "0.16.0"
indicatif = "0.18.0"
pathdiff = "0.2.3"
reqwest = { version = "0.12.22", features = ["rustls-tls-native-roots", "gzip", "zstd", "json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tantivy = "0.25.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "fs", "signal"] }
tokio-util = { version = "0.7.16", features = ["futures-io", "futures-util", "io"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
